# backend/src/main/resources/openapi.yaml
@@ -230,6 +230,22 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Land'
+  /lands:
+    get:
+      tags:
+        - Land
+      summary: Get all Land records
+      description: Retrieve a list of all available lands
+      operationId: getAvailableLands
+      responses:
+        '200':
+          description: List of land records
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Land'
   /land/{id}/ownership-history:
     get:
       tags:
